# Generated by Django 6.0.4 on 2026-06-01 17:21

import aportalapi.models.charts
import aportalapi.models.lyrics
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Chart',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('chart_file', models.FileField(blank=True, upload_to='', validators=[aportalapi.models.charts.validate_chart_file])),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='user_chart', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Lyrics',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('lyrics_file', models.FileField(blank=True, upload_to='', validators=[aportalapi.models.lyrics.validate_lyrics_file])),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='user_lyrics', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='SignupSheet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('completed', models.BooleanField(default=False)),
                ('chart', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='signup_chart', to='aportalapi.chart')),
                ('lyrics', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='signup_lyrics', to='aportalapi.lyrics')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='signup', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='UserUtilities',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('spotify_link', models.URLField(blank=True)),
                ('apple_link', models.URLField(blank=True)),
                ('youtube_link', models.URLField(blank=True)),
                ('user_image', models.ImageField(blank=True, upload_to='')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='user_utilities', to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
